--- a/Market/app/src/main/res/values/strings.xml
+++ b/Market/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name">NAME</string>
     <string name="_3x">3x</string>
     <string name="price_3">Price: 3€</string>
+    <string name="add">Add</string>
 </resources>
